Kubernete-yaml/clusterip-NP.yml
apiVersion: v1
kind: Service
metadata:
  name: ci-svc-1
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 30000
      targetPort: 8080
