Kubernete-yaml/serviceCIP.yml
apiVersion: v1
kind: Service
metadata:
  name: cip-ipapp
spec:
  type: ClusterIP
  selector:
    app: ipapp       # IMPORTANT: must match your Deployment label
  ports:
    - port: 80
      targetPort: 80
