Kubernete-yaml/deny-all-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
